syntax = "proto3";
package zetachain.zetacore.observer;

import "gogoproto/gogo.proto";

option go_package = "github.com/zeta-chain/zetacore/x/observer/types";

message TssFundMigratorInfo {
  int64 chain_id = 1;
  string migration_cctx_index = 2;
}
